<resources>
    <string name="app_name">Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="food_app">Food App</string>
    <string name="explore_your_dream_food">Explore your dream food</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="full_name">full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">password</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="food">Food</string>
    <string name="ayariahmedamine_contact_gmail_com">ayariahmedamine.contact@gmail.com</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product name</string>
    <string name="_5_0">5.0</string>
</resources>